--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
-		<title>three.js</title>
+		<title>boilerplate (AW3D)</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
-		body {
-			font-family: Helvetica, Arial, sans-serif;
-			font-size: 12px;
-			background-color: #000;
-			margin: 0px;
-			overflow: hidden;
-		}
-		#edit {
-			position: absolute;
-			bottom: 20px;
-			right: 20px;
-			padding: 8px;
-			color: #555;
-			background-color: #fff;
-			opacity: 0.5;
-		}
-		#edit:hover {
-			cursor: pointer;
-			opacity: 1;
-		}
+
+            body {
+                font-family: Helvetica, Arial, sans-serif;
+                font-size: 12px;
+                background-color: #000;
+                margin: 0px;
+                overflow: hidden;
+            }
+
+            #edit {
+                position: absolute;
+                bottom: 20px;
+                right: 20px;
+                padding: 8px;
+                color: #555;
+                background-color: #fff;
+                opacity: 0.5;
+            }
+
+            #edit:hover {
+                cursor: pointer;
+                opacity: 1;
+            }
+
 		</style>
 	</head>
+
 	<body ontouchstart="">
 		<script src="js/three.min.js"></script>
 		<script src="js/app.js"></script>
@@ -34,7 +40,7 @@
 		<script>
 
 			var loader = new THREE.XHRLoader();
-			loader.load( 'app.json', function ( text ) {
+			loader.load( "app.json", function ( text ) {
 
 				var json = JSON.parse( text );
 
@@ -47,20 +53,20 @@
 
 				if ( json.project.editable === true ) {
 
-					var button = document.createElement( 'div' );
-					button.id = 'edit';
-					button.textContent = 'EDIT';
+					var button = document.createElement( "div" );
+					button.id = "edit";
+					button.textContent = "OPEN IN EDITOR";
 					button.addEventListener( 'click', function ( event ) {
 
-						var url = location.href.split( '/' ).slice( 0, - 1 ).join( '/' );
-						window.open( 'http://threejs.org/editor/#file=' + url + '/app.json' );
+						var url = location.href.split( "/" ).slice( 0, - 1 ).join( "/" );
+						window.open( "https://sloothes.com/three/r78/editor/#file=" + url + "/app.json" );
 
 					}, false );
 					document.body.appendChild( button );
 
 				}
 
-				window.addEventListener( 'resize', function () {
+				window.addEventListener( "resize", function () {
 					player.setSize( window.innerWidth, window.innerHeight );
 				} );
 
