--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 		</style>
 
+        <script src="/socketcluster.js"></script>
+        <script src="/sc-codec-min-bin.js"></script>
         <script src="/js/signals.min.js"></script>
 
 	</head>
