--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
         <script src="/socketcluster.js"></script>
         <script src="/sc-codec-min-bin.js"></script>
+        <script src="js/signals.min.js"></script>
 
 	</head>
 
