--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-		<title>boilerplate (AW3D)</title>
+		<title>boilerplate (v1.2)</title>
 
 		<style>
 
