--- a/index.html
+++ b/index.html
@@ -1,97 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-		<title>boilerplate (v1.2)</title>
+		<title>boilerplate (v4.2.1)</title>
+
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/css/bootbox-dialoges.css">
+		<link rel="stylesheet" href="/css/side-panels.css">
+		<link rel="stylesheet" href="/css/meter.css">
+		<link rel="stylesheet" href="/css/messg.css" >
+		<link rel="stylesheet" href="/css/spectrum.css">
+		<link rel="stylesheet" href="/css/colorpicker.css">
+		<link rel="stylesheet" href="/css/spinner.css">
+		<link rel="stylesheet" href="/css/jquery-ui.css">
+		<link rel="stylesheet" href="/css/alerts.css">
+		<link rel="stylesheet" href="/css/panel-ui.css">
+		<link rel="stylesheet" href="/css/anywhere3d.css">
+		<link rel="stylesheet" href="/css/jquery.Jcrop.css">
+		<link rel="stylesheet" href="/css/menu-menubar.css">
+		<link rel="stylesheet" href="/css/index.css">
+		<link rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="/photoswipe/dist/photoswipe.css">
+		<link rel="stylesheet" href="/photoswipe/dist/default-skin/default-skin.css">
 
 		<style>
-
-            body {
-                font-family: Helvetica, Arial, sans-serif;
-                font-size: 12px;
-                background-color: #000;
-                margin: 0px;
-                overflow: hidden;
-            }
-
-            #edit {
-                position: absolute;
-                bottom: 20px;
-                right: 20px;
-                padding: 8px;
-                color: #555;
-                background-color: #fff;
-                opacity: 0.5;
-            }
-
-            #edit:hover {
-                cursor: pointer;
-                opacity: 1;
-            }
-
+			body { font-family: Helvetica, Arial, sans-serif; font-size: 12px; background-color: #000; margin: 0px; overflow: hidden; } #edit { position: absolute; bottom: 20px; right: 20px; padding: 8px; color: #555; background-color: #fff; opacity: 0.5; } #edit:hover { cursor: pointer; opacity: 1; } .middle > * { position:absolute; height:fit-content; width:fit-content; top:0; bottom:0; left:0; right:0; margin:auto; }
 		</style>
-
-        <style class="joystick-controls"> 
-            .gameinput-button__inner { 
-                display:table-cell; vertical-align: middle; 
-            } 
-            .gameinput-joystick { 
-                border:solid 0px white; border-radius:50%; position:absolute; bottom:30px; 
-                user-select:none; touch-action:none; -ms-touch-action:none; 
-                -webkit-user-select:none; -moz-user-select:none; -ms-user-select:none; 
-            } 
-            .gameinput-frame { 
-                position:absolute; top:0; left:0; pointer-events:none; opacity:0.5; 
-            } 
-            .gameinput-button { 
-                cursor:pointer; text-align:center; position:absolute; display:table; 
-                box-sizing:border-box; border:1px solid #333; 
-                border-radius:50%; background:rgba( 255, 255, 255, .5 ); 
-                user-select:none; touch-action:none; -ms-touch-action:none; 
-                -webkit-user-select:none; -moz-user-select:none; -ms-user-select:none; 
-            } 
-            #joystick1 { bottom:50px; right:40px; width:120px; height:120px;z-index:1; } 
-            #joystick2 { bottom:50px; left:40px; width:120px; height:120px; z-index:1;} 
-            #jumpButton { right:105px; bottom:240px; z-index:1; } 
-            @media ( max-width: 768px ) { 
-                #joystick1 { bottom:0px; right:0px; } 
-                #joystick2 { bottom:0px; left:0px; } 
-                #jumpButton { bottom:190px; right:65px; } 
-                .gameinput-joystick { bottom:0px;} 
-            } 
-            .gameinput-joystick__button { 
-                position:absolute; width:72px; height:72px; left:85px; top:85px; cursor:pointer; 
-                box-sizing:border-box; border-radius:50%; border:1px solid #333; background:rgba( 255, 255, 255, .5 ); 
-            } 
-        </style>
-
-        <script src="/socketcluster.js"></script>
-        <script src="/sc-codec-min-bin.js"></script>
 
 	</head>
 
 	<body ontouchstart="">
 
-        <div id="scene-container"></div>
-
-        <script src="js/signals.min.js"></script>
-		<script src="js/three.min.js"></script>
-		<script src="js/EditorControls.js"></script>
 		<script src="js/app.js"></script>
-		
+		<script src="js/three.js"></script>
+
+		<!-- includes -->
+
 		<script>
+
+			(function(){
+
+			//  Loading dialog.
+
+				var loadingDialog = document.createElement("div");
+				loadingDialog.id = "loading-dialog"
+				loadingDialog.classList.add("middle", "text-center");
+				loadingDialog.style.cssText = "position:absolute;top:0;left:0;bottom:0;right:0;background:none;z-index:9999;";
+
+				var dialogContent = document.createElement("h2");
+				dialogContent.style.cssText = "width:fit-content;font-weight:bold;color:#fff;text-align:center;"
+				dialogContent.innerHTML = "Loading" + "<br>" + "Please wait..." + "<br>" + "(heavy duty)";
+
+				loadingDialog.appendChild( dialogContent );
+				document.body.appendChild( loadingDialog );
+
+			})();
+
+		//
 
 			var loader = new THREE.XHRLoader();
 			loader.load( "app.json", function ( text ) {
 
 				var json = JSON.parse( text );
-                
-                debugMode = json.project.debugMode; // important!
 
 				var player = new APP.Player();
+
 				player.load( json );
 				player.setSize( window.innerWidth, window.innerHeight );
 				player.play();
@@ -102,7 +77,7 @@
 
 					var button = document.createElement( "div" );
 					button.id = "edit";
-					button.textContent = "OPEN IN EDITOR";
+					button.textContent = "OPEN TO EDITOR";
 					button.addEventListener( 'click', function ( event ) {
 
 						var url = location.href.split( "/" ).slice( 0, - 1 ).join( "/" );
@@ -111,31 +86,24 @@
 					}, false );
 
 					document.body.appendChild( button );
+
 				}
+
+		//
 
 				window.addEventListener( "resize", function () {
 					player.setSize( window.innerWidth, window.innerHeight );
 				});
 
+		//
+
+				setTimeout(function(){
+					var dialog = document.getElementById("loading-dialog");
+					dialog.style.display = "none"; dialog.remove();
+				}, 1000);
+
 			});
 
-            (function(){
-
-                var joysticControls1 = document.createElement( "div" );
-                var joysticControls2 = document.createElement( "div" );
-                joysticControls1.id = "joystick-controls-1";
-                joysticControls2.id = "joystick-controls-2";
-                joysticControls1.classList.add("joystick-controls");
-                joysticControls2.classList.add("joystick-controls");
-
-                var container = document.getElementById("scene-container");
-
-                container.appendChild( joysticControls1 );
-                container.appendChild( joysticControls2 );
-
-            })();
-
 		</script>
-
 	</body>
 </html>
