--- a/index.html
+++ b/index.html
@@ -45,22 +45,52 @@
 			//  Loading dialog.
 
 				var loadingDialog = document.createElement("div");
-				loadingDialog.id = "loading-dialog"
+				loadingDialog.id = "loading-dialog";
 				loadingDialog.classList.add("middle", "text-center");
 				loadingDialog.style.cssText = "position:absolute;top:0;left:0;bottom:0;right:0;background:none;z-index:9999;";
 
 				var dialogContent = document.createElement("h2");
-				dialogContent.style.cssText = "width:fit-content;font-weight:bold;color:#fff;text-align:center;"
-				dialogContent.innerHTML = "Loading" + "<br>" + "Please wait..." + "<br>" + "(heavy duty)";
+				dialogContent.style.cssText = "width:fit-content;font-weight:bold;color:#fff;text-align:center;";
+				dialogContent.innerHTML = "Please wait..." + "<br>" + "Loading... " + "<span id=\"loaded\"></span>" + "<br>" + "(heavy duty)";
 
 				loadingDialog.appendChild( dialogContent );
 				document.body.appendChild( loadingDialog );
 
 			})();
 
-		//
+		//	Loading manager.
 
-			var loader = new THREE.XHRLoader();
+			var manager = new THREE.LoadingManager();
+
+			manager.onLoad = function(){
+				$("#loaded").text( "completed" );
+				console.log( "[manager]", "Loading completed." );
+				setTimeout(function(){
+					var dialog = document.getElementById("loading-dialog");
+					dialog.style.display = "none"; dialog.remove();
+				}, 2000);
+			};
+
+			manager.onProgress = function(url, loaded, total){
+				console.log( "[manager]", loaded, "of", total, "files loaded:", url );
+			};
+
+			manager.onError = function(err){
+
+				var dialog = document.getElementById("loading-dialog");
+				dialog.style.display = "none"; dialog.remove();
+
+				console.error( "[manager]", err );
+
+				setTimeout( dialogError );
+
+			};
+
+			console.log( "manager:", manager );
+
+		//	Loader.
+
+			var loader = new THREE.XHRLoader( manager );
 			loader.load( "app.json", function ( text ) {
 
 				var json = JSON.parse( text );
@@ -89,20 +119,81 @@
 
 				}
 
-		//
+		//		Resize.
 
 				window.addEventListener( "resize", function () {
 					player.setSize( window.innerWidth, window.innerHeight );
 				});
 
-		//
+		//		Remove dialog.
 
 				setTimeout(function(){
 					var dialog = document.getElementById("loading-dialog");
 					dialog.style.display = "none"; dialog.remove();
 				}, 1000);
 
+			}, function onProgress( e ){
+
+				var placeholder = document.getElementById("loaded");
+
+				if ( e.lengthComputable && e.total > 0 ) {
+
+					var loaded = e.loaded / 1024; // (KB)
+					var total  = e.total / Math.pow(1024, 2); // (MB)
+
+					console.log( "on progress:", loaded.toFixed(2), "KB of", total.toFixed(2), "MB loaded." );
+
+					var percent = (e.loaded / e.total) * 100;
+					placeholder.text = percent.toFixed(0) + "%";
+
+
+				} else {
+
+					console.log( "on progress:", e.loaded, "bytes loaded." );
+
+					var filesize = 1024 * 1024;
+					var total = filesize; // (in bytes)
+					var percent = (e.loaded / total) * 100;
+					placeholder.text = percent.toFixed(0) + "%";
+
+				}
+
+			}, function onError(err){
+
+				var dialog = document.getElementById("loading-dialog");
+				dialog.style.display = "none"; dialog.remove();
+
+				console.error(err);
+
+				setTimeout( dialogError );
+
 			});
+
+		//	Error dialog.
+
+			function dialogError(){
+
+				var errorDialog = document.createElement("div");
+				errorDialog.id = "error-dialog"
+				errorDialog.classList.add("middle", "text-center");
+				errorDialog.style.cssText = "position:absolute;top:0;left:0;bottom:0;right:0;background:none;z-index:9999;";
+
+				var errorContent = document.createElement("div");
+				errorContent.style.cssText = "width:fit-content;font-weight:bold;color:#fff;text-align:center;";
+				errorDialog.appendChild( errorContent );
+
+				var errorTitle = document.createElement("h2");
+				errorTitle.textContent = "Loading Error";
+				errorContent.appendChild( errorTitle ); 
+
+				var errorMessage = document.createElement("h4");
+				errorMessage.style.cssText = "width:fit-content;font-weight:bold;color:#fff;text-align:center;";
+				errorMessage.textContent = "Please reload the page (or press F5 key)<br>and try again.";
+				errorContent.appendChild( errorMessage ); 
+
+				document.body.appendChild( errorDialog );
+
+			}
 
 		</script>
 	</body>
