--- a/index.html
+++ b/index.html
@@ -63,12 +63,17 @@
 			var manager = new THREE.LoadingManager();
 
 			manager.onLoad = function(){
-				$("#loaded").text( "completed" );
+
+				var loadholder = document.getElementById("loaded");
+				loadholder.text = "completed";
+
 				console.log( "[manager]", "Loading completed." );
+
 				setTimeout(function(){
 					var dialog = document.getElementById("loading-dialog");
 					dialog.style.display = "none"; dialog.remove();
 				}, 2000);
+
 			};
 
 			manager.onProgress = function(url, loaded, total){
@@ -134,7 +139,7 @@
 
 			}, function onProgress( e ){
 
-				var placeholder = document.getElementById("loaded");
+				var loadholder = document.getElementById("loaded");
 
 				if ( e.lengthComputable && e.total > 0 ) {
 
@@ -144,7 +149,7 @@
 					console.log( "on progress:", loaded.toFixed(2), "KB of", total.toFixed(2), "MB loaded." );
 
 					var percent = (e.loaded / e.total) * 100;
-					placeholder.text = percent.toFixed(0) + "%";
+					loadholder.text = percent.toFixed(0) + "%";
 
 
 				} else {
@@ -154,7 +159,7 @@
 					var filesize = 1024 * 1024;
 					var total = filesize; // (in bytes)
 					var percent = (e.loaded / total) * 100;
-					placeholder.text = percent.toFixed(0) + "%";
+					loadholder.text = percent.toFixed(0) + "%";
 
 				}
 
