--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
 
 					console.log( "on progress:", e.loaded, "bytes loaded." );
 
-					var filesize = 1024 * 1024;
-					var total = filesize; // (in bytes)
+					var total = 734445; // (in bytes)
 					var percent = (e.loaded / total) * 100;
 					loadholder.text = percent.toFixed(0) + "%";
 
