--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
 				var loadholder = document.getElementById("loaded");
 				loadholder.text = "completed";
+				console.log( "loadholder:", loadholder );
 
 				console.log( "[manager]", "Loading completed." );
 
@@ -155,6 +156,7 @@
 					var total = 734445; // (in bytes)
 					var percent = (e.loaded / total) * 100;
 					loadholder.text = percent.toFixed(0) + "%";
+					console.log( "loadholder:", loadholder );
 
 				}
 
