--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 				setTimeout(function(){
 					var dialog = document.getElementById("loading-dialog");
-					dialog.style.display = "none"; dialog.remove();
+				//	dialog.style.display = "none"; dialog.remove();
 				}, 2000);
 
 			};
