--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			manager.onLoad = function(){
 
 				var loadholder = document.getElementById("loaded");
-				loadholder.text = "completed";
+				loadholder.textContent = "completed";
 				console.log( "loadholder:", loadholder );
 
 				console.log( "[manager]", "Loading completed." );
@@ -74,7 +74,7 @@
 
 				setTimeout(function(){
 					var dialog = document.getElementById("loading-dialog");
-				//	dialog.style.display = "none"; dialog.remove();
+					dialog.style.display = "none"; dialog.remove();
 				}, 2000);
 
 			};
@@ -146,7 +146,7 @@
 					console.log( "on progress:", loaded.toFixed(2), "KB of", total.toFixed(2), "MB loaded." );
 
 					var percent = (e.loaded / e.total) * 100;
-					loadholder.text = percent.toFixed(0) + "%";
+					loadholder.textContent = percent.toFixed(0) + "%";
 
 
 				} else {
@@ -155,7 +155,7 @@
 
 					var total = 734445; // (in bytes)
 					var percent = (e.loaded / total) * 100;
-					loadholder.text = percent.toFixed(0) + "%";
+					loadholder.textContent = percent.toFixed(0) + "%";
 					console.log( "loadholder:", loadholder );
 
 				}
